--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\SGCorpHR.DATA\packages.config" />
+  <repository path="..\SGCorpHR.TEST\packages.config" />
   <repository path="..\SGCorpHR.UI\packages.config" />
 </repositories>
