--- a/SGCorpHR.TEST/SGCorpHR.TEST.csproj
+++ b/SGCorpHR.TEST/SGCorpHR.TEST.csproj
@@ -44,6 +44,8 @@
   <ItemGroup>
     <Compile Include="FileOperationsTest.cs" />
     <Compile Include="FileRepositoryTest.cs" />
+    <Compile Include="PaidTimeOffOperationsTests.cs" />
+    <Compile Include="PaidTimeOffRepositoryTests.cs" />
     <Compile Include="PolicyDocumentsOperationsTest.cs" />
     <Compile Include="PolicyDocumentsRepoTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
