Added interface for testable mock data to PTO repo/ops

--- a/SGCorpHR.Models/SGCorpHR.Models.csproj
+++ b/SGCorpHR.Models/SGCorpHR.Models.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Category.cs" />
     <Compile Include="Employee.cs" />
+    <Compile Include="Interfaces\IPaidTimeOffRepository.cs" />
     <Compile Include="PaidTimeOff.cs" />
     <Compile Include="PolicyDocument.cs" />
     <Compile Include="Resumes.cs" />
