--- a/SGCorpHR.DATA/SGCorpHR.DATA.csproj
+++ b/SGCorpHR.DATA/SGCorpHR.DATA.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileRepository.cs" />
+    <Compile Include="Mocks\PtoMock.cs" />
     <Compile Include="PaidTimeOffRepository.cs" />
     <Compile Include="PolicyDocumentRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
