--- a/SGCorpHR.TEST/App.config
+++ b/SGCorpHR.TEST/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="Mode" value="Test" />
+    <add key="Mode" value="" />
 
   </appSettings>
   <connectionStrings>
