--- a/SGCorpHR.Models/SGCorpHR.Models.csproj
+++ b/SGCorpHR.Models/SGCorpHR.Models.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Employee.cs" />
     <Compile Include="Interfaces\IPaidTimeOffRepository.cs" />
     <Compile Include="Interfaces\ISuggestionRepository.cs" />
+    <Compile Include="Managers.cs" />
     <Compile Include="PaidTimeOff.cs" />
     <Compile Include="PolicyDocument.cs" />
     <Compile Include="Resumes.cs" />
