--- a/SGCorpHR.UI/bin/SGCorpHR.UI.dll.config
+++ b/SGCorpHR.UI/bin/SGCorpHR.UI.dll.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="SWCCorp" connectionString="Server=localhost\sql2014;Database=SWCCorp;Trusted_Connection=True"/>
+    <add name="SWCCorp" connectionString="Server=localhost\sql2014;Database=SWCCorp;Trusted_Connection=True" />
 
   </connectionStrings>
   <system.web>
@@ -59,6 +59,14 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.2.0" newVersion="5.2.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
