--- a/SGCorpHR.UI/SGCorpHR.UI.csproj
+++ b/SGCorpHR.UI/SGCorpHR.UI.csproj
@@ -104,6 +104,7 @@
     <Content Include="Image\swg_logo-white.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Scripts\app\displayEmpDirector.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -123,6 +124,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\EmployeeDirectoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PolicyDocumentsController.cs" />
@@ -162,6 +164,7 @@
     <Content Include="Views\TimeTracker\ViewPtoRequests.cshtml" />
     <Content Include="Views\TimeTracker\SubmitPtoRequest.cshtml" />
     <Content Include="Views\TimeTracker\EditPtoRequest.cshtml" />
+    <Content Include="Views\EmployeeDirectory\EmployeeDirectory.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
