--- a/SGCorpHR.UI/SGCorpHR.UI.csproj
+++ b/SGCorpHR.UI/SGCorpHR.UI.csproj
@@ -104,7 +104,6 @@
     <Content Include="Image\swg_logo-white.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Scripts\app\displayEmpDirector.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -125,6 +124,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\EmployeeDirectoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PolicyDocumentsController.cs" />
@@ -165,6 +165,7 @@
     <Content Include="Views\TimeTracker\SubmitPtoRequest.cshtml" />
     <Content Include="Views\TimeTracker\EditPtoRequest.cshtml" />
     <Content Include="Views\EmployeeDirectory\EmployeeDirectory.cshtml" />
+    <Content Include="Views\Employee\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -176,6 +177,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="PolicyDocuments\DressCode\" />
     <Folder Include="Resumes\" />
+    <Folder Include="Scripts\app\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SGCorpHR.BLL\SGCorpHR.BLL.csproj">
