--- a/SGCorpHR.Models/SGCorpHR.Models.csproj
+++ b/SGCorpHR.Models/SGCorpHR.Models.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Category.cs" />
+    <Compile Include="Departments.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="Interfaces\IEmployeeDirectoryRepository.cs" />
     <Compile Include="Interfaces\IPaidTimeOffRepository.cs" />
