department CRUD working, views in progress

--- a/SGCorpHR.BLL/SGCorpHR.BLL.csproj
+++ b/SGCorpHR.BLL/SGCorpHR.BLL.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DepartmentOperations.cs" />
     <Compile Include="EmployeeDirectoryOperations.cs" />
     <Compile Include="FileOperations.cs" />
     <Compile Include="OperationsFactory.cs" />
