--- a/SGCorpHR.UI/SGCorpHR.UI.csproj
+++ b/SGCorpHR.UI/SGCorpHR.UI.csproj
@@ -104,6 +104,9 @@
     <Content Include="Image\swg_logo-white.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Scripts\app\createDepartment.js" />
+    <Content Include="Scripts\app\deleteDepartment.js" />
+    <Content Include="Scripts\app\updateDepartment.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -124,6 +127,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\DepartmentsController.cs" />
     <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\EmployeeDirectoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -165,9 +169,9 @@
     <Content Include="Views\TimeTracker\ViewPtoRequests.cshtml" />
     <Content Include="Views\TimeTracker\SubmitPtoRequest.cshtml" />
     <Content Include="Views\TimeTracker\EditPtoRequest.cshtml" />
-    <Content Include="Views\EmployeeDirectory\EmployeeDirectory.cshtml" />
     <Content Include="Views\Employee\Index.cshtml" />
-    <Content Include="Views\Employee\LookUp.cshtml" />
+    <Content Include="Views\Employee\ManageDepartments.cshtml" />
+    <Content Include="Views\Employee\_CreateDepartment.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -179,7 +183,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="PolicyDocuments\DressCode\" />
     <Folder Include="Resumes\" />
-    <Folder Include="Scripts\app\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SGCorpHR.BLL\SGCorpHR.BLL.csproj">
