--- a/SGCorpHR.UI/bin/SGCorpHR.UI.dll.config
+++ b/SGCorpHR.UI/bin/SGCorpHR.UI.dll.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="SWCCorp" connectionString="Server=localhost\sql2014;Database=SWCCorp;Trusted_Connection=True" />
+    <add name="SWCCorp" connectionString="Server=KILEYDOWLIN8DCC\SQLEXPRESS;Database=SWCCorp;Trusted_Connection=True" />
 
   </connectionStrings>
   <system.web>
